Putting gh repo back in line w/ local work
This is a mass change (w/ loss of change log) performed because of trouble executing 'git push'. Done to re-syncronize local repo work with things stored in the gh repo.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 *~
+ 
+/home/vscode/GPUCache
+/home/vscode/Local Storage
+/home/vscode/storage.json
+/home/vscode/User/workspaceStorage
+/home/vscode/Cache
+/home/vscode/Cookies*
