--- a/home/vscode/User/settings.json
+++ b/home/vscode/User/settings.json
@@ -1,5 +1,11 @@
 // Place your settings in this file to overwrite the default settings
 {
     "explorer.openEditors.visible": 0,
-    "diffEditor.renderSideBySide": false
+    "diffEditor.renderSideBySide": false,
+
+    "terminal.integrated.shell.windows": "f:\\ps.bat",
+    "workbench.welcome.enabled": false,
+    "workbench.colorTheme": "Default Light+",
+
+    "editor.formatOnSave": true
 }
