--- a/home/vscode/User/settings.json
+++ b/home/vscode/User/settings.json
@@ -2,12 +2,20 @@
 {
     "explorer.openEditors.visible": 0,
     "diffEditor.renderSideBySide": false,
-
+    //
     "terminal.integrated.shell.windows": "f:\\ps.bat",
     "workbench.welcome.enabled": false,
     "workbench.colorTheme": "Monokai Dimmed",
-
+    //
     "editor.formatOnSave": true,
     "window.zoomLevel": 0,
-    "workbench.iconTheme": "vs-seti"
+    "workbench.iconTheme": "vs-seti",
+    //
+    "workbench.editor.enablePreviewFromQuickOpen": false,
+    //
+    "todohighlight.isEnable": true,
+    "todohighlight.isCaseSensitive": false,
+    "todohighlight.keywords": [
+        "todo"
+    ]
 }
