--- a/2025/.tmux.conf
+++ b/2025/.tmux.conf
@@ -9,15 +9,11 @@ bind -n C-S-Left run-shell  "tmux if -F '#{window_zoomed_flag}' 'select-pane -L 
 bind -n C-S-Up run-shell    "tmux if -F '#{window_zoomed_flag}' 'select-pane -U \; resize-pane -Z' 'select-pane -U'"
 bind -n C-S-Down run-shell  "tmux if -F '#{window_zoomed_flag}' 'select-pane -D \; resize-pane -Z' 'select-pane -D'"
 
-
-
 # Pane border styling
-# set -g pane-border-style 'fg=colour238'
-# set -g pane-active-border-style 'fg=colour208,bg=default'
- set -g pane-border-lines single
+set -g pane-border-lines single
 
 # Alternative for even more prominence - uncomment if you want background color too
-# set -g pane-active-border-style 'fg=colour208,bg=colour235'
+set -g pane-active-border-style 'fg=colour208,bg=colour235'
 
 # If you want to use double-line characters for active border (requires Unicode support)
 # set -g pane-active-border-style 'fg=colour208'
@@ -36,3 +32,14 @@ set -g window-active-style 'fg=colour250,bg=colour235'
 ## subtle dimming - just text
 # set -g window-style 'fg=colour245'
 # set -g window-active-style 'fg=default'
+
+# Show current directory in pane border
+set -g pane-border-status top
+set -g pane-border-format "#{pane_index}: #{b:pane_current_path}"
+
+# Status bar changes color based on window focus
+set -g status on
+set -g status-position bottom
+set -g focus-events on
+set-hook -g pane-focus-in 'set status-style bg=colour34,fg=colour15,bold'
+set-hook -g pane-focus-out 'set status-style bg=colour238,fg=colour245'
