add LettersPractice prod monitoring

--- a/2025/.tmux.conf
+++ b/2025/.tmux.conf
@@ -43,3 +43,8 @@ set -g status-position bottom
 set -g focus-events on
 set-hook -g pane-focus-in 'set status-style bg=colour34,fg=colour15,bold'
 set-hook -g pane-focus-out 'set status-style bg=colour238,fg=colour245'
+
+# Production health monitoring (refreshes every 60s)
+set -g status-interval 60
+set -g status-right-length 50
+set -g status-right "#(~/dev/configutils/2025/tmux-prod-health.sh) | %H:%M %d-%b"
