add sys monitoring

--- a/2025/.tmux.conf
+++ b/2025/.tmux.conf
@@ -37,6 +37,12 @@ set -g window-active-style 'fg=colour250,bg=colour235'
 set -g pane-border-status top
 set -g pane-border-format "#{pane_index}: #{b:pane_current_path}"
 
+
+# Status bar
+
+# 5 second interval
+set -g status-interval 5
+
 # Status bar changes color based on window focus
 set -g status on
 set -g status-position bottom
@@ -44,7 +50,11 @@ set -g focus-events on
 set-hook -g pane-focus-in 'set status-style bg=colour34,fg=colour15,bold'
 set-hook -g pane-focus-out 'set status-style bg=colour238,fg=colour245'
 
-# Production health monitoring (refreshes every 60s)
-set -g status-interval 60
+# LettersPractice Production health monitoring (refreshes every 60s)
 set -g status-right-length 50
-set -g status-right "#(~/dev/configutils/2025/tmux-prod-health.sh) | %H:%M %d-%b"
+# 60s enforced by caching script
+set -g status-right "#(~/dev/configutils/2025/tmux-prod-health-cached.sh) | %H:%M %d-%b"
+
+# System Monitoring
+set -g status-left-length 60
+set -g status-left "[#S] | #[fg=yellow]Mem: #(free | awk '/Mem/ {printf \"%.0f%%\", $3/$2 * 100.0}')#[default] | #[fg=cyan]CPU: #(top -bn1 | grep 'Cpu(s)' | awk '{print $2\"%\"}')#[default] | "
